[package]
name = "langprint"
version = "0.1.1"
edition = "2024"
description = "Multi-language source-declaration code generation for C++, Rust, and C#, with cross-language conversion through a scoped declaration IR."
authors = ["corrm <islamnofl.official@gmail.com>"]
license = "MIT"
repository = "https://github.com/corrm/langprint"
readme = "README.md"
keywords = ["codegen", "sdk-generation", "cpp", "csharp", "transpile"]
categories = ["development-tools", "template-engine"]
publish = true

[dependencies]
thiserror = "2"

[dev-dependencies]
tempfile = "3.27"
